--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,54 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     margin: 1em;
     user-select: none;
+    background-color: rgb(253, 208, 176);
+
    }
    .activeCard {
        color: red;
        background: pink;
    }
+
+   body {
+    font-family: "Comic Sans MS";
+    font-weight: 150;
+    background-color:rgb(190, 207, 255);
+    background-image: url("https://themepack.me/i/c/749x468/media/g/273/football-theme-15.jpg");
+    background-size: cover; 
+    background-repeat: no-repeat;
+    
+  }
+
+  /*
+h1 {
+    text-align: center;
+    font-size: medium;
+  
+  }
+  h2 {
+    text-align: center;
+    font-size: large;
+  }
+  .h3 {
+    text-align: center;
+    font-size: x-large;
+    color: crimson;
+  }
+  
+  .p1 {
+    text-emphasis-position: 20px;
+  }
+  
+  .h01 {
+    background-image: url("https://image.freepik.com/free-vector/cute-cat-kitten-family-cartoon-doodle-banner_40564-293.jpg");
+    background-size: 325px 250px;
+    background-color: slateblue;
+  }
+  
+  button{
+    font-family: "Comic Sans MS";
+    background-color: burlywood;
+  
+  
+  }
+  */
