--- a/src/App.css
+++ b/src/App.css
@@ -15,17 +15,17 @@
    }
 
    body {
-    font-family: "Comic Sans MS";
+    font-family: "Allerta Stencil", Sans-serif;
     font-weight: 150;
     background-color:rgb(190, 207, 255);
     background-image: url("https://themepack.me/i/c/749x468/media/g/273/football-theme-15.jpg");
-    background-size: cover; 
+    background-size: cover;
     background-repeat: no-repeat;
     
   }
 
-  /*
-h1 {
+
+  h1 {
     text-align: center;
     font-size: medium;
   
@@ -45,8 +45,8 @@ h1 {
   }
   
   .h01 {
-    background-image: url("https://image.freepik.com/free-vector/cute-cat-kitten-family-cartoon-doodle-banner_40564-293.jpg");
-    background-size: 325px 250px;
+    background-image: url("https://i1.wp.com/fort-simpson.com/wp-content/uploads/2019/01/sport.png?ssl=1");
+    background-size: 1350px 294px;
     background-color: slateblue;
   }
   
@@ -56,4 +56,3 @@ h1 {
   
   
   }
-  */
