--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
     background-image: url("https://i1.wp.com/fort-simpson.com/wp-content/uploads/2019/01/sport.png?ssl=1");
     background-size: 1350px 294px;
     background-color: slateblue;
+    color: aliceblue;
   }
   
   button{
